--- a/Loan Prediction.ipynb
+++ b/Loan Prediction.ipynb
@@ -3542,6 +3542,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# modeling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
